azurermps/3.7.0/AzureRM.Profile/index.md
---
Module Name: AzureRM.Profile
Module Guid: 342714fc-4009-4863-8afb-a9067e3db04b
Locale: en-US
updated_at: 03/11/2017 02:03 AM
ms.date: 03/11/2017
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Profile/v2.7.0/AzureRM.Profile.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Profile/v2.7.0/AzureRM.Profile.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/04f63f6e685743ace2c57eb157574e34e8610b1c
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: false
ms.service: subscription
Add-AzureRmAccount: Subscriptions
Add-AzureRmEnvironment: Subscriptions
Disable-AzureRmDataCollection: Monitoring
Enable-AzureRmDataCollection: Monitoring
Get-AzureRmContext: Subscriptions
Get-AzureRmEnvironment: Subscriptions
Get-AzureRmSubscription: Subscriptions
Get-AzureRmTenant: Subscriptions
Remove-AzureRmEnvironment: Subscriptions
Save-AzureRmProfile: Subscriptions
Select-AzureRmProfile: Subscriptions
Set-AzureRmContext: Subscriptions
Set-AzureRmEnvironment: Subscriptions
_isModulePage: true
---

# AzureRM.Profile Module
## Description
{{Manually Enter Description Here}}

## AzureRM.Profile Cmdlets
### [Add-AzureRmAccount](Add-AzureRmAccount.md)
Adds an authenticated account to use for Azure Resource Manager cmdlet requests.

### [Add-AzureRmEnvironment](Add-AzureRmEnvironment.md)
Adds endpoints and metadata for an instance of Azure Resource Manager.

### [Disable-AzureRmDataCollection](Disable-AzureRmDataCollection.md)
Opts out of collecting data to improve the AzurePowerShell cmdlets. 
Data is not collected unless you explicitly opt in.

### [Enable-AzureRmDataCollection](Enable-AzureRmDataCollection.md)
Enables Azure PowerShell to collect data to improve the user experience with AzurePowerShell cmdlets.
Executing this cmdlet opts in to data collection for the current user on the current machine.
No data is collected unless you explicitly opt in.

### [Get-AzureRmContext](Get-AzureRmContext.md)
Gets the metadata used to authenticate Azure Resource Manager requests.

### [Get-AzureRmEnvironment](Get-AzureRmEnvironment.md)
Get endpoints and metadata for an instance of Azure services.

### [Get-AzureRmSubscription](Get-AzureRmSubscription.md)
Get subscriptions that the current account can access.

### [Get-AzureRmTenant](Get-AzureRmTenant.md)
Gets tenants that are authorized for the current user.

### [Remove-AzureRmEnvironment](Remove-AzureRmEnvironment.md)
Removes endpoints and metadata for connecting to a given Azure instance.

### [Save-AzureRmProfile](Save-AzureRmProfile.md)
Saves the current authentication information for use in other PowerShell sessions.

### [Select-AzureRmProfile](Select-AzureRmProfile.md)
Loads Azure authentication information from a file.

### [Set-AzureRmContext](Set-AzureRmContext.md)
Sets the tenant, subscription, and environment for cmdlets to use in the current session.

### [Set-AzureRmEnvironment](Set-AzureRmEnvironment.md)
Sets properties for an Azure environment.

